--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -41,17 +41,16 @@
   margin: 0 auto;
   padding: 20px 10px;
   transition: all 150ms linear;
-
-  @media screen and (min-width: 375px) {
-    padding: 20px 10px;
-  }
+  width: calc(100% - 10px * 2);
 
   @media screen and (min-width: 425px) {
     padding: 30px 15px;
+    width: calc(100% - 15px * 2);
   }
 
   @media screen and (min-width: 768px) {
     padding: 80px 30px;
+    width: calc(100% - 30px * 2);
   }
 }
 
