--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -90,11 +90,28 @@
       flex-direction: column;
       align-items: center;
 
+      @media screen and (min-width: 768px) {
+        gap: 10px;
+      }
+
       .icon-cards {
         flex-wrap: wrap;
+        min-width: 100% !important;
 
         &__item {
-          width: calc((100% - 24px * 2) / 2);
+          width: 100%;
+
+          @media screen and (min-width: 550px) {
+            width: calc((100% - 24px * 2) / 2);
+          }
+
+          @media screen and (min-width: 768px) {
+            width: 100%;
+          }
+
+          @media screen and (min-width: 1075px) {
+            width: calc((100% - 24px * 2) / 2);
+          }
         }
       }
 
