--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -91,6 +91,13 @@
     display: flex;
     justify-content: center;
     gap: 16px;
+    flex-wrap: wrap;
+
+    > div:last-of-type .content__button--yellow {
+      border: 1px solid $white-color;
+      background-color: transparent;
+      color: $white-color;
+    }
   }
 
   &__button {
@@ -98,6 +105,7 @@
 
     &--yellow {
       @include buttonYellow;
+      border: 1px solid $yellow-color;
     }
 
     &--blue {
@@ -106,26 +114,22 @@
 
     &--white {
       @include buttonWhite;
+      height: 24px;
+      padding: 12px 24px;
+
+      @media screen and (min-width: 425px) {
+        padding: 16px 32px;
+        height: 48px;
+      }
+
+      svg {
+        width: 100%;
+      }
     }
 
     &--disabled {
       cursor: auto;
       pointer-events: none;
-    }
-
-    &--yellow,
-    &--blue,
-    &--white {
-      height: 24px;
-      padding: 12px 24px;
-      @media screen and (min-width: 425px) {
-        padding: 16px 32px;
-        height: 48px;
-      }
-    }
-
-    svg {
-      width: 100%;
     }
   }
 
