--- a/src/components/IconCards/IconCards.scss
+++ b/src/components/IconCards/IconCards.scss
@@ -16,7 +16,15 @@
     flex-wrap: wrap;
 
     > li {
-      width: calc((100% - 24px * 2) / 3);
+      width: 100%;
+
+      @media screen and (min-width: 535px) {
+        width: calc(100% / 2 - 12px);
+      }
+
+      @media screen and (min-width: 768px) {
+        width: calc(100% / 3 - 20px);
+      }
     }
   }
 
