--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -93,7 +93,11 @@
     gap: 16px;
     flex-wrap: wrap;
 
-    > div:last-of-type .content__button--yellow {
+    &--white {
+      flex-wrap: nowrap;
+    }
+
+    > div:nth-of-type(2) .content__button--yellow {
       border: 1px solid $white-color;
       background-color: transparent;
       color: $white-color;
