--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -123,6 +123,14 @@
     &--align-top {
       align-items: flex-start;
     }
+
+    &--bigger-gap {
+      gap: 20px;
+
+      @media screen and (min-width: 768px) {
+        gap: 80px;
+      }
+    }
   }
 
   &__content {
@@ -181,7 +189,7 @@
     transition: all 120ms ease-out;
 
     &:hover {
-      transform: translate(0, -5px) scale(1.08);
+      transform: translate(0, -5px);
     }
 
     span:first-of-type {
