--- a/src/components/ImageCards/ImageCards.scss
+++ b/src/components/ImageCards/ImageCards.scss
@@ -4,13 +4,44 @@
 .image-cards {
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   gap: 12px;
 
+  @media screen and (min-width: 1024px) {
+    flex-wrap: nowrap;
+  }
+
   > li {
-    max-width: 25%;
+    width: 100%;
+
+    @media screen and (min-width: 550px) {
+      width: calc(50% - 6px);
+    }
+
+    @media screen and (min-width: 1024px) {
+      max-width: 25%;
+    }
 
     .image-card {
+      width: 100%;
       max-height: 350px;
+
+      img {
+        margin: auto auto 0 auto;
+        width: 100% !important;
+        height: auto !important;
+      }
+
+      @media screen and (min-width: 1024px) {
+        margin: auto 0 0 0 !important;
+        max-width: unset;
+
+        img {
+          margin: 0;
+          width: 100% !important;
+          height: 100% !important;
+        }
+      }
     }
   }
 
