--- a/src/components/IconCards/IconCards.scss
+++ b/src/components/IconCards/IconCards.scss
@@ -12,7 +12,23 @@
     flex-wrap: nowrap;
   }
 
-  &--wrap {
+  &--standard {
+    flex-wrap: wrap;
+
+    > li {
+      width: 100%;
+
+      @media screen and (min-width: 768px) {
+        width: calc(100% / 2 - 12px);
+      }
+
+      @media screen and (min-width: 1040px) {
+        width: calc(100% / 4 - 20px);
+      }
+    }
+  }
+
+  &--big {
     flex-wrap: wrap;
 
     > li {
