feat: add mobile layout for become a partner page

--- a/src/components/BigCards/BigCards.scss
+++ b/src/components/BigCards/BigCards.scss
@@ -7,11 +7,33 @@
   gap: 25px;
   justify-content: space-between;
 
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+  }
+
   > li {
     width: 100%;
   }
 
-  @media screen and (min-width: 768px) {
-    flex-wrap: nowrap;
+  &--big {
+    @media screen and (min-width: 768px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 1175px) {
+      flex-wrap: nowrap;
+    }
+
+    > li {
+      width: 100%;
+
+      @media screen and (min-width: 768px) {
+        width: calc(50% - 12.5px);
+      }
+
+      &:last-of-type {
+        width: 100%;
+      }
+    }
   }
 }
