--- a/src/components/IconCards/IconCard/IconCard.scss
+++ b/src/components/IconCards/IconCard/IconCard.scss
@@ -9,7 +9,11 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
-  padding: 40px 24px;
+  padding: 26px 12px;
+
+  @media screen and (min-width: 768px) {
+    padding: 40px 24px;
+  }
 
   &--align-left {
     align-items: flex-start;
