feat: add mobile layout for faq pages

--- a/src/components/Accordions/Accordions.scss
+++ b/src/components/Accordions/Accordions.scss
@@ -9,6 +9,8 @@
   &__buttons {
     align-items: center;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 8px;
     margin: 0 0 50px;
 
