--- a/src/components/Compliance/Compliance.scss
+++ b/src/components/Compliance/Compliance.scss
@@ -2,8 +2,11 @@
 @import "../../styles/mixins";
 
 .compliance {
-  padding-top: 30px;
+  padding-top: 60px;
 
+  @media screen and (min-width: 768px) {
+    padding-top: 30px;
+  }
   &__container {
     @include container;
   }
