--- a/src/components/IconCards/IconCard/IconCard.scss
+++ b/src/components/IconCards/IconCard/IconCard.scss
@@ -85,7 +85,7 @@
       background-color: $yellow-color;
 
       path {
-        fill: $black-color;
+        fill: $black-color-alt;
       }
     }
   }
