--- a/src/components/Positions/Positions.scss
+++ b/src/components/Positions/Positions.scss
@@ -28,10 +28,10 @@
       margin: 0 auto 15px 0;
       padding: 10px 26px;
       text-align: center;
-      flex: 0.2;
+      flex: 0.05;
 
       @media screen and (min-width: 975px) {
-        margin: 0 0 auto 0;
+        margin: 0 auto auto 0;
       }
     }
 
@@ -78,7 +78,12 @@
       overflow: hidden;
 
       @media screen and (min-width: 975px) {
-        margin: 0 0 0 50px;
+        flex: unset;
+        margin: 0 0 auto 50px;
+
+        &:hover {
+          flex: unset;
+        }
       }
 
       &:hover {
