feat: add color pallette and fonts in readme

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: $font-spoof-trail;
+  font-family: $font-spoof-trial;
   overflow-x: hidden;
 
   &::-webkit-scrollbar {
