--- a/src/components/Accordions/Accordions.scss
+++ b/src/components/Accordions/Accordions.scss
@@ -19,7 +19,7 @@
       background-color: $grey-color;
       border: 2px solid $grey-color;
       border-radius: 50px;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-size: 16px;
       font-style: normal;
       font-weight: 500;
