--- a/src/components/Header/Dropdown/Dropdown.scss
+++ b/src/components/Header/Dropdown/Dropdown.scss
@@ -64,7 +64,7 @@
 
     &-title {
       color: $black-color-alt;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-size: 16px;
       font-style: normal;
       font-weight: 500;
@@ -137,7 +137,7 @@
     align-items: center;
     color: $black-color-alt;
     display: flex;
-    font-family: $font-spoof-trail;
+    font-family: $font-spoof-trial;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
