--- a/src/components/Compliance/Compliance.scss
+++ b/src/components/Compliance/Compliance.scss
@@ -12,7 +12,7 @@
   }
 
   &__title {
-    @include titleSpoofTrail;
+    @include titleSpoofTrial;
   }
 
   &__section {
@@ -21,7 +21,7 @@
   }
 
   &__subtitle {
-    @include subtitleSpoofTrail;
+    @include subtitleSpoofTrial;
   }
 
   &__description {
