--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -106,12 +106,12 @@
       }
 
       &:nth-of-type(2) {
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        border-top: 1px solid $black-color-border;
         padding: 10px 0;
       }
 
       &:last-of-type {
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        border-top: 1px solid $black-color-border;
         padding: 10px 0;
       }
 
@@ -124,7 +124,7 @@
         }
 
         &:nth-of-type(2) {
-          border-left: 1px solid rgba(0, 0, 0, 0.1);
+          border-left: 1px solid $black-color-border;
           border-top: 0;
           padding: 10px 0px 10px 30px;
         }
@@ -145,7 +145,7 @@
         align-items: center;
         color: $blue-color;
         display: flex;
-        font-family: $font-spoof-trail;
+        font-family: $font-spoof-trial;
         font-size: 16px;
         font-style: normal;
         font-weight: 700;
@@ -177,7 +177,7 @@
 
       img {
         @include thinnerShadow;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        border: 1px solid $black-color-border;
         border-radius: 14px;
         width: 100%;
       }
