--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -52,7 +52,7 @@
   }
 
   &__title {
-    @include subtitleSpoofTrailBig;
+    @include subtitleSpoofTrialBig;
     text-align: center;
 
     &--white {
@@ -65,7 +65,7 @@
   }
 
   &__subtitle {
-    @include subtitleSpoofTrailSmall;
+    @include subtitleSpoofTrialSmall;
 
     &--white {
       color: $white-color;
@@ -77,7 +77,7 @@
   }
 
   &__description {
-    @include descriptionSpoofTrail;
+    @include descriptionSpoofTrial;
     text-align: center;
 
     @media screen and (min-width: 768px) {
@@ -151,7 +151,7 @@
     &-text {
       color: $black-color;
       font-size: 16px;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-weight: 700;
       line-height: 28px;
       margin: 0 4px 0 0;
