--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -204,7 +204,7 @@
 
     &-title {
       color: $black-color;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-size: 35px;
       font-style: normal;
       font-weight: 700;
@@ -235,7 +235,7 @@
       background-color: transparent;
       display: flex;
       font-size: 16px;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-weight: 500;
       justify-content: space-between;
       line-height: 28px;
@@ -306,7 +306,7 @@
       color: $black-color;
       background-color: $white-color;
       border-radius: 90px;
-      font-family: $font-spoof-trail;
+      font-family: $font-spoof-trial;
       font-size: 13px;
       font-weight: 500;
       height: 52px;
