--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -66,7 +66,7 @@
     }
 
     &__title {
-      @include subtitleSpoofTrailBig;
+      @include subtitleSpoofTrialBig;
     }
 
     &__description {
