--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,6 +30,8 @@ $cream-color: #fff8da;
 $cream-color-light: #fff8b7;
 $pink-color: #d3bafe;
 $green-color: #95edb2;
+$green-color-light: #dff9e6;
+$green-color-dark: #24a148;
 $purple-color: #7968ed;
 $purple-color-2: #8766d7;
 
