--- a/src/components/AnimatedCard/Rocket.scss
+++ b/src/components/AnimatedCard/Rocket.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-@mixin conversion {
+@mixin rocket {
   &--1 {
     bottom: 0;
     left: 0;
