--- a/src/components/AnimatedCard/Assets/SmallCardsAsset.scss
+++ b/src/components/AnimatedCard/Assets/SmallCardsAsset.scss
@@ -5,8 +5,6 @@
   margin: 0;
 
   li {
-    margin: 0px -4.5px 4.5px -4.5px;
-
     div {
       align-items: flex-start;
       border-radius: 15.43px;
@@ -47,6 +45,7 @@
       p {
         font-size: 7.71px;
         line-height: 11.57px;
+        text-align: left;
       }
     }
   }
