--- a/src/components/AnimatedCard/Assets/SmallCardsAsset.scss
+++ b/src/components/AnimatedCard/Assets/SmallCardsAsset.scss
@@ -3,49 +3,90 @@
 
 .animated-card__assets--add-ons {
   margin: 0;
+  transform: scale(1.2);
+
+  @media screen and (min-width: 768px) {
+    transform: scale(1);
+  }
 
   li {
     div {
       align-items: flex-start;
       border-radius: 15.43px;
-      height: calc(119.7px - 15.43px * 2);
-      padding: 15.43px;
+      height: calc(90px - 15.43px * 2);
+      padding: 10.04px;
 
+      @media screen and (min-width: 768px) {
+        height: calc(119.7px - 15.43px * 2);
+        padding: 15.43px;
+      }
       span {
-        font-size: 7.713px;
+        font-size: 5.021px;
         font-weight: 600;
         line-height: normal;
-        padding: 5.142px 7.713px 5.142px 5.142px;
-        right: 15.42px;
-        top: 15.42px;
+        padding: 3.347px 5.021px 3.347px 3.347px;
+        right: 10.04px;
+        top: 10.04px;
+
+        @media screen and (min-width: 768px) {
+          font-size: 7.713px;
+          padding: 5.142px 7.713px 5.142px 5.142px;
+          right: 15.42px;
+          top: 15.42px;
+        }
 
         &::before {
-          width: 6.427px;
-          height: 6.427px;
+          width: 4.184px;
+          height: 4.184px;
+
+          @media screen and (min-width: 768px) {
+            width: 6.427px;
+            height: 6.427px;
+          }
         }
       }
 
       div {
         padding: 0;
-        height: 30.84px;
-        width: 30.84px;
+        height: 20px;
+        width: 20px;
+
+        @media screen and (min-width: 768px) {
+          height: 30.84px;
+          width: 30.84px;
+
+          img {
+            border-radius: 7.71px;
+          }
+        }
 
         img {
-          border-radius: 7.71px;
+          border-radius: 5.021px;
           margin: 0;
         }
       }
 
       h3 {
-        font-size: 11.57px;
-        line-height: 15.43px;
-        margin: 10.28px 0 7.71px 0;
+        font-size: 7.532px;
+        line-height: 10.042px;
+        margin: 6.69px 0 5.02px 0;
+
+        @media screen and (min-width: 768px) {
+          font-size: 11.57px;
+          line-height: 15.43px;
+          margin: 10.28px 0 7.71px 0;
+        }
       }
 
       p {
-        font-size: 7.71px;
-        line-height: 11.57px;
+        font-size: 5.021px;
+        line-height: 7.532px;
         text-align: left;
+
+        @media screen and (min-width: 768px) {
+          font-size: 7.71px;
+          line-height: 11.57px;
+        }
       }
     }
   }
